Update header to text hero

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                 </ul>
             </header>
 
-            <div> 
-              <img src="images/logo.png" class="photo1">
+            <div class="page-title"> 
+              <h1 class="main-title">Glorious Knight Jam</h1>
+              <p class="subtitle">Соревнование по созданию игр, где важны скорость и вдохновение.</p>
             </div>
             <div class = "gif01"> 
                 <img src='images/gif01.gif' class="ggf">
