--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             <meta name="description" content="Что такое gamejam">
             <link type="images/x-icon" rel="shortcut icon" href="favicon.ico">
             <title>Что такое gamejam</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <link rel="stylesheet" href="gamejam_style.css">
         <head>
@@ -19,8 +22,9 @@
                 </ul>
             </header>
 
-            <div> 
-              <img src="images/logo.png" class="photo1">
+            <div class="page-title"> 
+              <h1 class="main-title">Glorious Knight Jam</h1>
+              <p class="subtitle">Соревнование по созданию игр, где важны скорость и вдохновение.</p>
             </div>
             <div class = "gif01"> 
                 <img src='images/gif01.gif' class="ggf">
@@ -81,7 +85,9 @@
               
             <h3 class="end">Спасибо за внимание</h3>
 
-            <a href="gamejam2.html" class="nav-link"><span class="end">Перейти на запись</span></a>
+            <div class="cta-wrapper">
+              <a href="gamejam2.html" class="cta-button">Перейти на запись</a>
+            </div>
 
               
             <div>
