--- a/gamejam2.html
+++ b/gamejam2.html
@@ -5,6 +5,9 @@
             <meta name="keywords" content="соревнование, создание игр">
             <meta name="description" content="Что такое gamejam">
             <title>Что такое gamejam</title>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
             <link rel="stylesheet" href="gamejam_style2.css">
         <head>
@@ -30,7 +33,9 @@
                     <a href="https://t.me/+wsI8rFMAGMNkNmYy"><img src='images/qrcode.png' class="ggf"></a>
                 </div>
                 <hr>
-                <a href="https://t.me/+wsI8rFMAGMNkNmYy" class="colortext021"><span class="colortext022">Кликните для перехода по ссылке</span></a>
+                <div class="cta-wrapper">
+                    <a href="https://t.me/+wsI8rFMAGMNkNmYy" class="cta-button">Кликните для перехода по ссылке</a>
+                </div>
                 <hr>
             </div>
            
