--- a/gamejam4.html
+++ b/gamejam4.html
@@ -5,6 +5,9 @@
           <meta name="keywords" content="соревнование, создание игр">
           <meta name="description" content="Что такое gamejam">
           <title>Что такое gamejam</title>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
           <link rel="stylesheet" href="gamejam_style3.css">
       <head>
@@ -14,7 +17,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link"><span class="colortext02">Главная</span></a></li>
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><span class="colortext01_01">О Glorious Knight Jam</span></a></li>
                 <li class="nav-item"><a href="gamejam2.html" class="nav-link"><span class="colortext02">Запись</span></a></li>
-                <li class="nav-item"><a href="gamejam3.html" class="nav-link"><span class="colortext02">О нас</span></a></li>
+                <li class="nav-item"><a href="index.html#about" class="nav-link"><span class="colortext02">О нас</span></a></li>
               </ul>
           </header>
           <div class="gif01">
@@ -23,7 +26,6 @@
               <div class="gif01">
                   <img src='images/poster for publication.png' class="ggf">
               </div>
-              <hr>
 
          <div class="text01">
               <h3>Главные столпы Glorious Knight Jam </h3>
@@ -49,7 +51,6 @@
                 </ul>
               </p>
               <p class="colortext01">Также будут сидеть независимые эксперты, которые будут докидывать баллы проектам</p>
-              <hr>
               <h3>Правила</h3>
               <p class="colortext01">
                 1.Уважение и дружелюбие
@@ -74,7 +75,6 @@
                   <li>Не доверяйте свои личные данные или пароли никому, даже администраторам.</li>
                 </ul>
               </p>
-              <hr>
             <footer>
               <hr>
               <hr class="footerhrs">
