--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                   <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><span class="colortext01_01">Главная</span></a></li>
                   <li class="nav-item"><a href="gamejam4.html" class="nav-link"><span class="colortext02">О Glorious Knight Jam</span></a></li>
                   <li class="nav-item"><a href="gamejam2.html" class="nav-link"><span class="colortext02">Запись</span></a></li>
-                  <li class="nav-item"><a href="#about" class="nav-link"><span class="colortext02">О нас</span></a></li>
                 </ul>
             </header>
 
@@ -28,6 +27,9 @@
             </div>
             <div class = "gif01"> 
                 <img src='images/gif01.gif' class="ggf">
+            </div>
+            <div class="cta-wrapper">
+              <a href="gamejam2.html" class="cta-button">Перейти на запись</a>
             </div>
             <div class="text01">
               <img src='images/fire.gif' class="firestyle">
@@ -75,7 +77,7 @@
                 <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
               </div>
             
-              <div class="about-section" id="about">
+              <div class="about-section">
                 <h3>О нас</h3>
                 <div class="about-grid">
                   <div class="about-card">
@@ -91,9 +93,6 @@
                     </p>
                   </div>
                 </div>
-                <div class="about-media">
-                  <img src='images/portret.png' class="ggf" alt="Портрет автора">
-                </div>
               </div>
   
             <script src="script.js"></script>
@@ -107,8 +106,6 @@
               
             <div>
             <footer>
-              <hr>
-              <hr class="footerhrs">
               <hr>
               <h4>By Zulu inc.</h4>
             </footer>
