--- a/gamejam4.html
+++ b/gamejam4.html
@@ -5,6 +5,9 @@
           <meta name="keywords" content="соревнование, создание игр">
           <meta name="description" content="Что такое gamejam">
           <title>Что такое gamejam</title>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
           <link rel="stylesheet" href="gamejam_style3.css">
       <head>
@@ -14,67 +17,87 @@
                 <li class="nav-item"><a href="index.html" class="nav-link"><span class="colortext02">Главная</span></a></li>
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><span class="colortext01_01">О Glorious Knight Jam</span></a></li>
                 <li class="nav-item"><a href="gamejam2.html" class="nav-link"><span class="colortext02">Запись</span></a></li>
-                <li class="nav-item"><a href="gamejam3.html" class="nav-link"><span class="colortext02">О нас</span></a></li>
+                <li class="nav-item"><a href="index.html#about" class="nav-link"><span class="colortext02">О нас</span></a></li>
               </ul>
           </header>
-          <div class="gif01">
-              <img src='images/firedd.gif' class="firestyle">
-          </div>
-              <div class="gif01">
-                  <img src='images/poster for publication.png' class="ggf">
+          <div class="hero">
+              <div class="hero-media">
+                  <img src='images/firedd.gif' class="firestyle" alt="Glorious Knight Jam огонь">
               </div>
-              <hr>
+              <div class="hero-content">
+                  <h1 class="page-title">Glorious Knight Jam</h1>
+                  <p class="subtitle">Главные правила и структура джема, чтобы команда успела создать сильный проект.</p>
+                  <div class="cta-wrapper">
+                      <a href="gamejam2.html" class="cta-button">Перейти к записи</a>
+                  </div>
+              </div>
+          </div>
+          <div class="hero-banner">
+              <img src='images/poster for publication.png' class="ggf" alt="Постер Glorious Knight Jam">
+          </div>
 
          <div class="text01">
-              <h3>Главные столпы Glorious Knight Jam </h3>
-              <p class="colortext01">
-                Так как мы не можем дать вам отгул от занятий во время проведения гейм джема мы увеличили количество дней для создания проект с 3 до 7 этого должно хватить для адекватно не спешной разработки своего детища. 
-              В команде может быть максимум 4 человека.
-              </p>
-              <p class="colortext01">
-                Для создания проекта можно использовать любой игровой движок, который вы знаете. 
-              </p>
-              <p class="colortext01">
-                После того как все команды будут записаны в дискорде мы раздадим роли и в общий чат выложим карточку с критериями разрабатываемой игры после чего можно будет приступать к разработке, важно, что посреди разработки мы выложим киллер-фичу которая должна, находится в игре. Вашей задачей будет внедрить её в свою игру так чтобы она взаимодействовала с игроком или дополняла антураж, она не обязательна, но её наличие даёт баллы. 
-              </p>
-              <p class="colortext01">
-                Вашу игру будут оценивать по нескольким критериям это:
-                <ul class="colortext01">
-                  <li>Завершённость игры</li>
-                  <li>Соответствие критериям</li>
-                  <li>Творческий подход к разработке</li>
-                  <li>Представленные механики</li>
-                  <li>Грамотное представление проекта</li>
-                  <li>Наличие киллер-фичи</li>
-                </ul>
-              </p>
-              <p class="colortext01">Также будут сидеть независимые эксперты, которые будут докидывать баллы проектам</p>
-              <hr>
-              <h3>Правила</h3>
-              <p class="colortext01">
-                1.Уважение и дружелюбие
-                <ul class="colortext01">
-                  <li>Соблюдайте уважительное отношение к другим участникам. Запрещено оскорбление, уничижительные высказывания, дискриминация и троллинг.</li>
-                  <li>Избегайте споров и конфликтов. При возникновении проблемы, обращайтесь к администрации.</li>
-                  <li>Не разглашайте личную информацию других участников без их разрешения.</li>
-                </ul>
-              </p>
-              <p class="colortext01">
-                2.Содержание
-                <ul class="colortext01">
-                  <li>Запрещено размещение контента, нарушающего законы или стандарты приличия.</li>
-                  <li>Не размещайте спам, рекламу, ссылки на вирусы или мошеннический контент.</li>
-                  <li>Материалы для взрослых и порнография строго запрещены.</li>
-                </ul>
-              </p>
-              <p class="colortext01">
-                3.Безопасность
-                <ul class="colortext01">
-                  <li>Запрещено приглашать на канал ботов без согласия администрации.</li>
-                  <li>Не доверяйте свои личные данные или пароли никому, даже администраторам.</li>
-                </ul>
-              </p>
-              <hr>
+              <h3>Главные столпы Glorious Knight Jam</h3>
+              <div class="info-grid">
+                  <div class="info-card">
+                      <h4>Сроки и команда</h4>
+                      <p class="colortext01">
+                          Мы увеличили длительность с 3 до 7 дней, чтобы работа шла без спешки. В команде может быть максимум 4 человека.
+                      </p>
+                  </div>
+                  <div class="info-card">
+                      <h4>Инструменты</h4>
+                      <p class="colortext01">
+                          Для создания проекта можно использовать любой игровой движок, который вы знаете.
+                      </p>
+                  </div>
+                  <div class="info-card">
+                      <h4>Критерии и киллер-фича</h4>
+                      <p class="colortext01">
+                          Мы выдадим карточку с критериями, а затем — киллер-фичу. Она не обязательна, но её наличие даёт дополнительные баллы.
+                      </p>
+                  </div>
+              </div>
+              <div class="section-block">
+                  <h4>Критерии оценки</h4>
+                  <ul class="checklist">
+                      <li>Завершённость игры</li>
+                      <li>Соответствие критериям</li>
+                      <li>Творческий подход к разработке</li>
+                      <li>Представленные механики</li>
+                      <li>Грамотное представление проекта</li>
+                      <li>Наличие киллер-фичи</li>
+                  </ul>
+                  <p class="colortext01">Также будут независимые эксперты, которые добавят баллы проектам.</p>
+              </div>
+              <div class="section-block">
+                  <h3>Правила</h3>
+                  <div class="rules-grid">
+                      <div class="rules-card">
+                          <h4>1. Уважение и дружелюбие</h4>
+                          <ul class="checklist">
+                              <li>Соблюдайте уважительное отношение к участникам.</li>
+                              <li>Избегайте споров и конфликтов, обращайтесь к администрации.</li>
+                              <li>Не разглашайте личную информацию других участников.</li>
+                          </ul>
+                      </div>
+                      <div class="rules-card">
+                          <h4>2. Содержание</h4>
+                          <ul class="checklist">
+                              <li>Запрещено размещение контента, нарушающего законы.</li>
+                              <li>Не размещайте спам, рекламу, вирусы или мошенничество.</li>
+                              <li>Материалы для взрослых и порнография запрещены.</li>
+                          </ul>
+                      </div>
+                      <div class="rules-card">
+                          <h4>3. Безопасность</h4>
+                          <ul class="checklist">
+                              <li>Запрещено приглашать ботов без согласия администрации.</li>
+                              <li>Не доверяйте личные данные и пароли никому.</li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
             <footer>
               <hr>
               <hr class="footerhrs">
