--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="game jam, геймджем, соревнование, создание игр" />
     <meta name="description" content="Glorious Knight Jam — геймджем: что это такое, как участвовать и чем делать игры." />
 
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="images/icon.png" type="image/svg+xml">
     <title>Glorious Knight Jam — что такое game jam</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
