--- a/gamejam4.html
+++ b/gamejam4.html
@@ -10,7 +10,7 @@
       content="Glorious Knight Jam: сроки, команда, правила, критерии оценки и киллер-фича."
     />
 
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="images/icon.png" type="image/svg+xml">
     <title>Glorious Knight Jam — о джеме</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
