--- a/gamejam2.html
+++ b/gamejam2.html
@@ -10,7 +10,7 @@
       content="Запись на Glorious Knight Jam: перейдите в Telegram, чтобы зарегистрироваться и получить детали."
     />
 
-    <link rel="icon" href="images/icon.png" type="image/svg+xml">
+    <link rel="icon" href="images/icon.svg" type="image/svg+xml">
     <title>Glorious Knight Jam — запись</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
